# pyramem

./: .env.example  .gitignore  README.md  demo.py  pyproject.toml
.github/workflows/: pytest.yaml
pyramem/: __init__.py
pyramem/api/: embeddings.py
pyramem/datastore/: __init__.py  base.py  chroma.py  pinecone.py
tests/datastore/: test_chroma.py
